Server config file parsing

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,8 @@
 all:
-	make clean
 	make server
 
 server:
-	clang server.c variables.c core.c -o ../bin/server -lpthread
+	clang server.c variables.c core.c config.c -o ../bin/server -lpthread -lplist
 
 clean:
 	rm -f ../bin/server
